[metadata]
name = EnhancedWebdriver
version = 0.0.0
author = Tesla2000
author_email = fratajczak124@gmail.com
description = Extension of webdriver with less boilerplate
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tesla2000/EnhancedWebdriver
project_urls =
    Homepage = https://github.com/Tesla2000/EnhancedWebdriver
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    requests>=2.31.0
    selenium>=4.18.1

[options.packages.find]
where = src